 -- Add sqlslave and sqlproxy modules for AsyncSQL.
 -- Add chanobj() per issue 401.
 -- Add function_name configuration option to rename hardcoded
    functions.
 -- Add @hook/args to allow arguments to be hooked.
 -- Extend %=<> subtitution to take integer values which allow
    softcode access to all 100 arguments.
 -- Add %+ substitution to return number of arguments.


Bug Fixes:
~~~~~~~~~
 -- INFO should show 'Patches' or 'INFO 1', but not both (Issue 236).
 -- @dolist and @trig were not passing TRACE bit through (Issue 237).
 -- Using \ as a shortcut to @emit no longer causes the beginning of
    the message to be escaped (Issue 219).  Thanks Alierak.
 -- @verb/no_name used unterminated verb_sw table (Issued 243).
    Thanks Jake.
 -- Guest objects left DARK through announcement code (Issue 244).
 -- @wall evaluated a speechmod before processing the message
    (Issue 16).  Thanks Jake.
 -- @wall's switches did not interact properly (Issue 30).  Thanks
    Jake.
 -- Corrected error messages for failed guest logins (Issue 246).
 -- @function did not strip ansi from or properly truncate
    user-defined function names. (Issue 249).  Thanks Jake.
 -- Fix typo in do_say() which left a bit-wise instead of a logical
    AND operation (Issue 245).
 -- Fix SORT(2 100) --> '100 2' bug introduced in 2.7.0.1 (Issue 251).
 -- Fix trailing padding in CENTER() (Issue 253).
 -- mid(abc,-1,2) now returns a, not ab. mid(abc,1,-2) now returns
    ab, not a.  This is the documented behavior.
 -- wordpos() did not strip ansi before counting characters.
 -- Fix signed / unsigned warning in dump_info() (Issue 276).
 -- Corrected minor typo in @comon section of help.txt. (Issue 275)
 -- Restore newline skipping in wrap(), broken in 2.7.0.2 (Issue 278).
 -- Fix potential buffer overflow in ladd() (Issue 282). Thanks Jake.
 -- Use %p printf format for pointer to avoid compiler warning about
    truncating a potentially 64-bit quantity.